@@ -1,4 +1,5 @@
-2021-01-16 Jan Kotanski <jankotan@gmail.com>
+2021-01-20 Jan Kotanski <jankotan@gmail.com>
+	* add nxscollect link sub-command
 	* add support for appending any data with nxscollect
 	* add h5cppwriter.load_file()
 	* add h5pywriter.load_file()
